--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 @import-normalize; /* bring in normalize.css styles */
-@import url('https://fonts.googleapis.com/css?family=Hepta+Slab|Noto+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Hepta+Slab:300,400&display=swap');
 /* Variables */
 /* End Variables */
 
@@ -10,13 +10,23 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Noto Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+html {
+  font-family: 'Hepta Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  font-weight: normal;
+  word-wrap: break-word;
+  font-kerning: normal;
+  -moz-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+  -ms-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+  -webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+  font-feature-settings: 'kern', 'liga', 'clig', 'calt';
 }
 
-li {
-  list-style: none;
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1,
@@ -25,11 +35,26 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Hepta Slab', serif;
+  text-rendering: optimizeLegibility;
+  line-height: 1.1;
+}
+
+li {
+  list-style: none;
 }
 
 a {
   text-decoration: none;
+}
+
+strong {
+  font-weight: inherit;
+  font-weight: 700;
+}
+
+a:active,
+a:hover {
+  outline-width: 0;
 }
 /* End General Styles */
 
