--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,31 @@
 @import-normalize; /* bring in normalize.css styles */
-@import url('https://fonts.googleapis.com/css?family=Hepta+Slab:300,400&display=swap');
+@font-face {
+  font-family: 'Sofia Pro';
+  src: url('../assets/fonts/Sofia Pro Light.woff') format('woff'),
+    url('../assets/fonts/Sofia Pro Light.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: 'Sofia Pro';
+  src: url('../assets/fonts/Sofia Pro Regular.woff') format('woff'),
+    url('../assets/fonts/Sofia Pro Regular.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Sofia Pro';
+  src: url('../assets/fonts/Sofia Pro Bold.woff') format('woff'),
+    url('../assets/fonts/Sofia Pro Bold.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 700;
+}
 /* Variables */
+:root {
+  --font-size: 16px;
+}
 /* End Variables */
 
 /* General Styles */
@@ -11,8 +36,8 @@
 }
 
 html {
-  font-family: 'Hepta Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, sans-serif;
+  font-family: Sofia Pro, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font-weight: normal;
@@ -22,6 +47,7 @@ html {
   -ms-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   -webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+  font-size: var(--min-font);
 }
 
 body {
