fixing quote section height, added drop shadow to footer icons

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -119,3 +119,11 @@ button {
   grid-area: footer;
 }
 /* End Main Layout */
+
+/* Utils */
+.shadow {
+  -webkit-filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
+  /* Similar syntax to box-shadow */
+}
+/* End Utils */
