--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -121,9 +121,12 @@ button {
 /* End Main Layout */
 
 /* Utils */
-.shadow {
+.drop-shadow {
   -webkit-filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
   filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
   /* Similar syntax to box-shadow */
+}
+.box-shadow {
+  box-shadow: 0px 0px 8px 2px #000000;
 }
 /* End Utils */
