improving background fallbacks,  hero image size reduced

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -91,6 +91,7 @@ button {
 
 /* Main Layout */
 .app-wrapper {
+  background: rgb(5, 5, 5);
   overflow: hidden;
   display: grid;
   align-items: start;
