fixed screen flashes

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -50,6 +50,7 @@ html {
   -webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   font-size: var(--min-font);
+  background: #000;
 }
 
 body {
