--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 @import-normalize; /* bring in normalize.css styles */
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600&display=swap');
 
 /* Variables */
 :root {
@@ -17,7 +18,7 @@
 }
 
 html {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -53,6 +54,7 @@ h6 {
   text-rendering: optimizeLegibility;
   line-height: 1.1;
   color: #fff;
+  font-family: 'Merriweather', serif;
 }
 
 li {
