--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 @import-normalize; /* bring in normalize.css styles */
-@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700,900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap');
 
 /* Variables */
 :root {
@@ -54,7 +54,7 @@ h6 {
   text-rendering: optimizeLegibility;
   line-height: 1.1;
   color: #fff;
-  font-family: 'Merriweather', serif;
+  font-family: 'Libre Baskerville', serif;
 }
 
 li {
