--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -96,7 +96,6 @@ button {
   /* Similar syntax to box-shadow */
 }
 .box-shadow {
-  /* box-shadow: 0px 0px 8px 2px #000000; */
-  box-shadow: 0px 11px 28px 0px rgb(0, 0, 0), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+  box-shadow: 0px 2px 4px rgb(0, 0, 0, 0.18);
 }
 /* End Utils */
