--- a/src/styles/1-settings/_variables-typography.scss
+++ b/src/styles/1-settings/_variables-typography.scss
@@ -7,7 +7,44 @@
 // instead of this file's variables
 
 /* Fallback fonts */
-$fallback: --apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-  Arial, sans-serif;
+$fallback: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 /* Primary fonts */
+
+/* Font sizes */
+$text-xs: 0.75rem;
+$text-sm: 0.875rem;
+$text-base: 1rem;
+$text-lg: 1.125rem;
+$text-xl: 1.25rem;
+$text-2xl: 1.5rem;
+$text-3xl: 1.875rem;
+$text-4xl: 2.25rem;
+$text-5xl: 3rem;
+$text-6xl: 4rem;
+
+/* Letter spacing */
+$tracking-tighter: -0.05em;
+$tracking-tight: -0.025em;
+$tracking-normal: 0;
+$tracking-wide: 0.025em;
+$tracking-wider: 0.05em;
+$tracking-widest: 0.1em;
+
+/* Line height */
+$leading-none: 1;
+$leading-tight: 1.25;
+$leading-snug: 1.375;
+$leading-normal: 1.5;
+$leading-relaxed: 1.625;
+$leading-loose: 2;
+$leading-3: 0.75rem;
+$leading-4: 1rem;
+$leading-5: 1.25rem;
+$leading-6: 1.5rem;
+$leading-7: 1.75rem;
+$leading-8: 2rem;
+$leading-9: 2.25rem;
+$leading-10: 2.5rem;
