multiple changes to sass helper files

--- a/src/styles/6-helpers/index.scss
+++ b/src/styles/6-helpers/index.scss
@@ -1,9 +1,14 @@
 @import "./helpers-backgrounds";
 @import "./helpers-borders";
-@import "./helpers-colors";
-@import "./helpers-displays";
-@import "./helpers-images";
-@import "./helpers-positions";
-@import "./helpers-shadows";
+@import "./helpers-effects";
+@import "./helpers-flexbox";
+@import "./helpers-grid";
+@import "./helpers-interactivity";
+@import "./helpers-layout";
+@import "./helpers-sizing";
 @import "./helpers-spacing";
+@import "./helpers-svg";
+@import "./helpers-tables";
+@import "./helpers-transforms";
+@import "./helpers-transitions";
 @import "./helpers-typography";
