--- a/src/styles/1-settings/index.scss
+++ b/src/styles/1-settings/index.scss
@@ -1,4 +1,4 @@
 @import "./variables-colors";
-@import "./variables-global";
-@import "./variables-shadows";
+@import "./variables-effects";
+@import "./variables-layout";
 @import "./variables-typography";
