--- a/src/styles/4-elements/_base.scss
+++ b/src/styles/4-elements/_base.scss
@@ -45,3 +45,9 @@ object {
   display: block;
   vertical-align: middle;
 }
+
+body,
+html {
+  text-rendering: optimizeLegibility;
+  font-family: $font-sans;
+}
