--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,5 @@
 /*  ============================================================================================================
-    METHODOLOGIES:
-    ITCSS, BEM
+    METHODOLOGIES: ITCSS
     ============================================================================================================ */
 
 @import "./0-vendor"; // Files for third party code. At the top to be the most easily overridden
