--- a/src/styles/1-settings/_variables-colors.scss
+++ b/src/styles/1-settings/_variables-colors.scss
@@ -1,5 +1,5 @@
 /*  ============================================================================================================
-    Color Variables
+    Color Palette Variables
     ============================================================================================================ */
 
 $gray-100: #f7fafc;
