added more sass utilities

--- a/src/styles/1-settings/index.scss
+++ b/src/styles/1-settings/index.scss
@@ -1,4 +1,6 @@
 @import "./variables-colors";
 @import "./variables-effects";
+@import "./variables-grid";
 @import "./variables-layout";
+@import "./variables-spacing";
 @import "./variables-typography";
