--- a/src/styles/1-settings/_variables-spacing.scss
+++ b/src/styles/1-settings/_variables-spacing.scss
@@ -33,3 +33,39 @@ $margin-40: 10rem;
 $margin-48: 12rem;
 $margin-56: 14rem;
 $margin-64: 16rem;
+
+$space-1: 0.25rem;
+$space-2: 0.5rem;
+$space-3: 0.75rem;
+$space-4: 1rem;
+$space-5: 1.25rem;
+$space-6: 1.5rem;
+$space-8: 2rem;
+$space-10: 2.5rem;
+$space-12: 3rem;
+$space-16: 4rem;
+$space-20: 5rem;
+$space-24: 6rem;
+$space-32: 8rem;
+$space-40: 10rem;
+$space-48: 12rem;
+$space-56: 14rem;
+$space-64: 16rem;
+
+$-space-1: -0.25rem;
+$-space-2: -0.5rem;
+$-space-3: -0.75rem;
+$-space-4: -1rem;
+$-space-5: -1.25rem;
+$-space-6: -1.5rem;
+$-space-8: -2rem;
+$-space-10: -2.5rem;
+$-space-12: -3rem;
+$-space-16: -4rem;
+$-space-20: -5rem;
+$-space-24: -6rem;
+$-space-32: -8rem;
+$-space-40: -10rem;
+$-space-48: -12rem;
+$-space-56: -14rem;
+$-space-64: -16rem;
