added sass variables & helpers

--- a/src/styles/1-settings/index.scss
+++ b/src/styles/1-settings/index.scss
@@ -1,6 +1,9 @@
+@import "./variables-screen";
 @import "./variables-colors";
 @import "./variables-effects";
 @import "./variables-grid";
-@import "./variables-layout";
+@import "./variables-borders";
+@import "./variables-sizing";
 @import "./variables-spacing";
+@import "./variables-transitions";
 @import "./variables-typography";
