--- a/src/styles/1-settings/_variables-effects.scss
+++ b/src/styles/1-settings/_variables-effects.scss
@@ -1,3 +1,4 @@
+/* Shadows */
 $shadow-xs: 0 0 0 1px rgba(0, 0, 0, 0.05);
 $shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 $shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
