--- a/src/styles/1-settings/_variables-spacing.scss
+++ b/src/styles/1-settings/_variables-spacing.scss
@@ -1,3 +1,4 @@
+/* Padding */
 $padding-1: 0.25rem;
 $padding-2: 0.5rem;
 $padding-3: 0.75rem;
@@ -16,6 +17,7 @@ $padding-48: 12rem;
 $padding-56: 14rem;
 $padding-64: 16rem;
 
+/* Margin */
 $margin-1: 0.25rem;
 $margin-2: 0.5rem;
 $margin-3: 0.75rem;
@@ -34,6 +36,7 @@ $margin-48: 12rem;
 $margin-56: 14rem;
 $margin-64: 16rem;
 
+/* Spacing */
 $space-1: 0.25rem;
 $space-2: 0.5rem;
 $space-3: 0.75rem;
