hero images added, sass changes, styled header & hero components

--- a/src/styles/1-settings/_variables-colors.scss
+++ b/src/styles/1-settings/_variables-colors.scss
@@ -101,3 +101,12 @@ $pink-600: #d53f8c;
 $pink-700: #b83280;
 $pink-800: #97266d;
 $pink-900: #702459;
+
+$accents-8: #fafafa;
+$accents-7: #eaeaea;
+$accents-6: #999;
+$accents-5: #888;
+$accents-4: #666;
+$accents-3: #444;
+$accents-2: #333;
+$accents-1: #111;
