--- a/src/styles/4-elements/_base.scss
+++ b/src/styles/4-elements/_base.scss
@@ -51,3 +51,10 @@ html {
   text-rendering: optimizeLegibility;
   font-family: $font-sans;
 }
+
+*,
+*::before,
+*::after {
+  border-width: 0;
+  border-style: solid;
+}
