--- a/src/styles/6-helpers/_helpers-backgrounds.scss
+++ b/src/styles/6-helpers/_helpers-backgrounds.scss
@@ -297,6 +297,31 @@ bg-fixed {
   background-color: $pink-900;
 }
 
+.bg-accents-8 {
+  background-color: $accents-8;
+}
+.bg-accents-7 {
+  background-color: $accents-7;
+}
+.bg-accents-6 {
+  background-color: $accents-6;
+}
+.bg-accents-5 {
+  background-color: $accents-5;
+}
+.bg-accents-4 {
+  background-color: $accents-4;
+}
+.bg-accents-3 {
+  background-color: $accents-3;
+}
+.bg-accents-2 {
+  background-color: $accents-2;
+}
+.bg-accents-1 {
+  background-color: $accents-1;
+}
+
 /* Background opacity */
 .bg-opacity-100 {
   opacity: 1;
