--- a/src/styles/6-helpers/_helpers-borders.scss
+++ b/src/styles/6-helpers/_helpers-borders.scss
@@ -547,6 +547,31 @@
   border-color: $pink-900;
 }
 
+.border-accents-8 {
+  border-color: $accents-8;
+}
+.border-accents-7 {
+  border-color: $accents-7;
+}
+.border-accents-6 {
+  border-color: $accents-6;
+}
+.border-accents-5 {
+  border-color: $accents-5;
+}
+.border-accents-4 {
+  border-color: $accents-4;
+}
+.border-accents-3 {
+  border-color: $accents-3;
+}
+.border-accents-2 {
+  border-color: $accents-2;
+}
+.border-accents-1 {
+  border-color: $accents-1;
+}
+
 /* Border Opacity */
 .border-opacity-100 {
   opacity: 1;
