--- a/src/styles/6-helpers/_helpers-sizing.scss
+++ b/src/styles/6-helpers/_helpers-sizing.scss
@@ -204,70 +204,70 @@
 
 /* Height */
 .h-0 {
-  width: 0;
+  height: 0;
 }
 .h-1 {
-  width: $h-1;
+  height: $h-1;
 }
 .h-2 {
-  width: $h-2;
+  height: $h-2;
 }
 .h-3 {
-  width: $h-3;
+  height: $h-3;
 }
 .h-4 {
-  width: $h-4;
+  height: $h-4;
 }
 .h-5 {
-  width: $h-5;
+  height: $h-5;
 }
 .h-6 {
-  width: $h-6;
+  height: $h-6;
 }
 .h-8 {
-  width: $h-8;
+  height: $h-8;
 }
 .h-10 {
-  width: $h-10;
+  height: $h-10;
 }
 .h-12 {
-  width: $h-12;
+  height: $h-12;
 }
 .h-16 {
-  width: $h-16;
+  height: $h-16;
 }
 .h-20 {
-  width: $h-20;
+  height: $h-20;
 }
 .h-24 {
-  width: $h-24;
+  height: $h-24;
 }
 .h-32 {
-  width: $h-32;
+  height: $h-32;
 }
 .h-40 {
-  width: $h-40;
+  height: $h-40;
 }
 .h-48 {
-  width: $h-48;
+  height: $h-48;
 }
 .h-56 {
-  width: $h-56;
+  height: $h-56;
 }
 .h-64 {
-  width: $h-64;
+  height: $h-64;
 }
 .h-auto {
-  width: auto;
+  height: auto;
 }
 .h-px {
-  width: 1px;
+  height: 1px;
 }
 .h-full {
-  width: 100%;
+  height: 100%;
 }
 .h-screen {
-  width: 100vw;
+  height: 100vw;
 }
 
 /* Min-Height */
