--- a/src/styles/1-settings/_variables-typography.scss
+++ b/src/styles/1-settings/_variables-typography.scss
@@ -27,6 +27,7 @@ $text-3xl: 1.875rem;
 $text-4xl: 2.25rem;
 $text-5xl: 3rem;
 $text-6xl: 4rem;
+$text-7xl: 5rem;
 
 /* Letter spacing */
 $tracking-tighter: -0.05em;
