--- a/src/styles/5-components/_components-footer.scss
+++ b/src/styles/5-components/_components-footer.scss
@@ -2,6 +2,8 @@
   color: #b7b5bd;
   content: "•";
   padding: 0.75rem;
+  font-size: 6px;
+  vertical-align: middle;
 }
 
 .footer-item:last-child:after {
