--- a/src/styles/5-components/_components-brands.scss
+++ b/src/styles/5-components/_components-brands.scss
@@ -1,7 +1,7 @@
 .brands {
-  background: radial-gradient(
-    70% 70% at 50% 100%,
-    rgb(31, 31, 31) 0px,
-    rgb(17, 17, 17) 100%
-  );
+  //   background: radial-gradient(
+  //     70% 70% at 50% 100%,
+  //     rgb(232, 232, 232) 0px,
+  //     rgb(250, 250, 250) 100%
+  //   );
 }
