--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -28,7 +28,9 @@
 
 /* 5-components. Majority of code goes here to style specific UI components */
 @import "./5-components/components-header";
+@import "./5-components/components-hero";
 @import "./5-components/components-brands";
+@import "./5-components/components-community";
 @import "./5-components/components-testimonials";
 @import "./5-components/components-searchbox";
 @import "./5-components/components-footer";
