--- a/src/styles/5-components/_components-brands.scss
+++ b/src/styles/5-components/_components-brands.scss
@@ -1,7 +1,11 @@
 .brands {
-  //   background: radial-gradient(
-  //     70% 70% at 50% 100%,
-  //     rgb(232, 232, 232) 0px,
-  //     rgb(250, 250, 250) 100%
-  //   );
+  @extend .bg-accents-8, .py-20, .border-t, .border-accents-7;
+
+  &__container {
+    @extend .container, .mx-auto, .flex, .items-center, .justify-between;
+  }
+}
+
+.brand {
+  @extend .inline-flex, .items-center, .justify-between;
 }
