--- a/src/styles/5-components/_components-header.scss
+++ b/src/styles/5-components/_components-header.scss
@@ -17,8 +17,9 @@
       @extend .text-black,
         .inline-flex,
         .items-center,
-        .text-xl,
-        .font-extrabold;
+        .text-2xl,
+        .font-black,
+        .tracking-tight;
     }
 
     &__menu {
@@ -29,10 +30,6 @@
     &__account {
       @extend .grid, .justify-between, .items-center, .gap-8, .text-sm;
       grid-template-columns: repeat(2, auto);
-
-      &__btn {
-        @extend .px-3, .py-2, .rounded-md, .bg-red-600, .text-white, .shadow-md;
-      }
     }
   }
 }
