added primary & secondary color variables; renamed files; style changes

--- a/src/styles/1-settings/_variables-colors.scss
+++ b/src/styles/1-settings/_variables-colors.scss
@@ -2,6 +2,9 @@
     Color Palette Variables
     ============================================================================================================ */
 
+$primary-color: #f00;
+$secondary-color: #fed7d7;
+
 $gray-100: #f7fafc;
 $gray-200: #edf2f7;
 $gray-300: #e2e8f0;
