--- a/src/styles/6-helpers/_helpers-backgrounds.scss
+++ b/src/styles/6-helpers/_helpers-backgrounds.scss
@@ -14,6 +14,12 @@ bg-fixed {
 }
 
 /* Background colors */
+.bg-primary {
+  background-color: $primary-color;
+}
+.bg-secondary {
+  background-color: $secondary-color;
+}
 .bg-transparent {
   background-color: transparent;
 }
