--- a/src/styles/6-helpers/_helpers-spacing.scss
+++ b/src/styles/6-helpers/_helpers-spacing.scss
@@ -498,6 +498,60 @@
 .m-px {
   margin: 1px;
 }
+.-m-1 {
+  margin: -$margin-1;
+}
+.-m-2 {
+  margin: -$margin-2;
+}
+.-m-3 {
+  margin: -$margin-3;
+}
+.-m-4 {
+  margin: -$margin-4;
+}
+.-m-5 {
+  margin: -$margin-5;
+}
+.-m-6 {
+  margin: -$margin-6;
+}
+.-m-8 {
+  margin: -$margin-8;
+}
+.-m-10 {
+  margin: -$margin-10;
+}
+.-m-12 {
+  margin: -$margin-12;
+}
+.-m-16 {
+  margin: -$margin-16;
+}
+.-m-20 {
+  margin: -$margin-20;
+}
+.-m-24 {
+  margin: -$margin-24;
+}
+.-m-32 {
+  margin: -$margin-32;
+}
+.-m-40 {
+  margin: -$margin-40;
+}
+.-m-48 {
+  margin: -$margin-48;
+}
+.-m-56 {
+  margin: -$margin-56;
+}
+.-m-64 {
+  margin: -$margin-64;
+}
+.-m-px {
+  margin: -1px;
+}
 .my-0 {
   margin-top: 0;
   margin-bottom: 0;
@@ -577,6 +631,78 @@
 .my-px {
   margin-top: 1px;
   margin-bottom: 1px;
+}
+.-my-1 {
+  margin-top: -$margin-1;
+  margin-bottom: -$margin-1;
+}
+.-my-2 {
+  margin-top: -$margin-2;
+  margin-bottom: -$margin-2;
+}
+.-my-3 {
+  margin-top: -$margin-3;
+  margin-bottom: -$margin-3;
+}
+.-my-4 {
+  margin-top: -$margin-4;
+  margin-bottom: -$margin-4;
+}
+.-my-5 {
+  margin-top: -$margin-5;
+  margin-bottom: -$margin-5;
+}
+.-my-6 {
+  margin-top: -$margin-6;
+  margin-bottom: -$margin-6;
+}
+.-my-8 {
+  margin-top: -$margin-8;
+  margin-bottom: -$margin-8;
+}
+.-my-10 {
+  margin-top: -$margin-10;
+  margin-bottom: -$margin-10;
+}
+.-my-12 {
+  margin-top: -$margin-12;
+  margin-bottom: -$margin-12;
+}
+.-my-16 {
+  margin-top: -$margin-16;
+  margin-bottom: -$margin-16;
+}
+.-my-20 {
+  margin-top: -$margin-20;
+  margin-bottom: -$margin-20;
+}
+.-my-24 {
+  margin-top: -$margin-24;
+  margin-bottom: -$margin-24;
+}
+.-my-32 {
+  margin-top: -$margin-32;
+  margin-bottom: -$margin-32;
+}
+.-my-40 {
+  margin-top: -$margin-40;
+  margin-bottom: -$margin-40;
+}
+.-my-48 {
+  margin-top: -$margin-48;
+  margin-bottom: -$margin-48;
+}
+.-my-56 {
+  margin-top: -$margin-56;
+  margin-bottom: -$margin-56;
+}
+.-my-64 {
+  margin-top: -$margin-64;
+  margin-bottom: -$margin-64;
+}
+.-my-px {
+  margin-top: -1px;
+  margin-bottom: -1px;
 }
 .mx-0 {
   margin-right: 0;
@@ -658,6 +784,78 @@
   margin-right: 1px;
   margin-left: 1px;
 }
+.-mx-1 {
+  margin-right: -$margin-1;
+  margin-left: -$margin-1;
+}
+.-mx-2 {
+  margin-right: -$margin-2;
+  margin-left: -$margin-2;
+}
+.-mx-3 {
+  margin-right: -$margin-3;
+  margin-left: -$margin-3;
+}
+.-mx-4 {
+  margin-right: -$margin-4;
+  margin-left: -$margin-4;
+}
+.-mx-5 {
+  margin-right: -$margin-5;
+  margin-left: -$margin-5;
+}
+.-mx-6 {
+  margin-right: -$margin-6;
+  margin-left: -$margin-6;
+}
+.-mx-8 {
+  margin-right: -$margin-8;
+  margin-left: -$margin-8;
+}
+.-mx-10 {
+  margin-right: -$margin-10;
+  margin-left: -$margin-10;
+}
+.-mx-12 {
+  margin-right: -$margin-12;
+  margin-left: -$margin-12;
+}
+.-mx-16 {
+  margin-right: -$margin-16;
+  margin-left: -$margin-16;
+}
+.-mx-20 {
+  margin-right: -$margin-20;
+  margin-left: -$margin-20;
+}
+.-mx-24 {
+  margin-right: -$margin-24;
+  margin-left: -$margin-24;
+}
+.-mx-32 {
+  margin-right: -$margin-32;
+  margin-left: -$margin-32;
+}
+.-mx-40 {
+  margin-right: -$margin-40;
+  margin-left: -$margin-40;
+}
+.-mx-48 {
+  margin-right: -$margin-48;
+  margin-left: -$margin-48;
+}
+.-mx-56 {
+  margin-right: -$margin-56;
+  margin-left: -$margin-56;
+}
+.-mx-64 {
+  margin-right: -$margin-64;
+  margin-left: -$margin-64;
+}
+.-mx-px {
+  margin-right: -1px;
+  margin-left: -1px;
+}
 .mt-0 {
   margin-top: 0;
 }
@@ -717,6 +915,60 @@
 }
 .mt-px {
   margin-top: 1px;
+}
+.-mt-1 {
+  margin-top: -$margin-1;
+}
+.-mt-2 {
+  margin-top: -$margin-2;
+}
+.-mt-3 {
+  margin-top: -$margin-3;
+}
+.-mt-4 {
+  margin-top: -$margin-4;
+}
+.-mt-5 {
+  margin-top: -$margin-5;
+}
+.-mt-6 {
+  margin-top: -$margin-6;
+}
+.-mt-8 {
+  margin-top: -$margin-8;
+}
+.-mt-10 {
+  margin-top: -$margin-10;
+}
+.-mt-12 {
+  margin-top: -$margin-12;
+}
+.-mt-16 {
+  margin-top: -$margin-16;
+}
+.-mt-20 {
+  margin-top: -$margin-20;
+}
+.-mt-24 {
+  margin-top: -$margin-24;
+}
+.-mt-32 {
+  margin-top: -$margin-32;
+}
+.-mt-40 {
+  margin-top: -$margin-40;
+}
+.-mt-48 {
+  margin-top: -$margin-48;
+}
+.-mt-56 {
+  margin-top: -$margin-56;
+}
+.-mt-64 {
+  margin-top: -$margin-64;
+}
+.-mt-px {
+  margin-top: -1px;
 }
 .mr-0 {
   margin-right: 0;
@@ -778,6 +1030,60 @@
 .mr-px {
   margin-right: 1px;
 }
+.-mr-1 {
+  margin-right: -$margin-1;
+}
+.-mr-2 {
+  margin-right: -$margin-2;
+}
+.-mr-3 {
+  margin-right: -$margin-3;
+}
+.-mr-4 {
+  margin-right: -$margin-4;
+}
+.-mr-5 {
+  margin-right: -$margin-5;
+}
+.-mr-6 {
+  margin-right: -$margin-6;
+}
+.-mr-8 {
+  margin-right: -$margin-8;
+}
+.-mr-10 {
+  margin-right: -$margin-10;
+}
+.-mr-12 {
+  margin-right: -$margin-12;
+}
+.-mr-16 {
+  margin-right: -$margin-16;
+}
+.-mr-20 {
+  margin-right: -$margin-20;
+}
+.-mr-24 {
+  margin-right: -$margin-24;
+}
+.-mr-32 {
+  margin-right: -$margin-32;
+}
+.-mr-40 {
+  margin-right: -$margin-40;
+}
+.-mr-48 {
+  margin-right: -$margin-48;
+}
+.-mr-56 {
+  margin-right: -$margin-56;
+}
+.-mr-64 {
+  margin-right: -$margin-64;
+}
+.-mr-px {
+  margin-right: -1px;
+}
 .mb-0 {
   margin-bottom: 0;
 }
@@ -838,6 +1144,60 @@
 .mb-px {
   margin-bottom: 1px;
 }
+.-mb-1 {
+  margin-bottom: -$margin-1;
+}
+.-mb-2 {
+  margin-bottom: -$margin-2;
+}
+.-mb-3 {
+  margin-bottom: -$margin-3;
+}
+.-mb-4 {
+  margin-bottom: -$margin-4;
+}
+.-mb-5 {
+  margin-bottom: -$margin-5;
+}
+.-mb-6 {
+  margin-bottom: -$margin-6;
+}
+.-mb-8 {
+  margin-bottom: -$margin-8;
+}
+.-mb-10 {
+  margin-bottom: -$margin-10;
+}
+.-mb-12 {
+  margin-bottom: -$margin-12;
+}
+.-mb-16 {
+  margin-bottom: -$margin-16;
+}
+.-mb-20 {
+  margin-bottom: -$margin-20;
+}
+.-mb-24 {
+  margin-bottom: -$margin-24;
+}
+.-mb-32 {
+  margin-bottom: -$margin-32;
+}
+.-mb-40 {
+  margin-bottom: -$margin-40;
+}
+.-mb-48 {
+  margin-bottom: -$margin-48;
+}
+.-mb-56 {
+  margin-bottom: -$margin-56;
+}
+.-mb-64 {
+  margin-bottom: -$margin-64;
+}
+.-mb-px {
+  margin-bottom: -1px;
+}
 .ml-0 {
   margin-left: 0;
 }
@@ -897,6 +1257,60 @@
 }
 .ml-px {
   margin-left: 1px;
+}
+.-ml-1 {
+  margin-left: -$margin-1;
+}
+.-ml-2 {
+  margin-left: -$margin-2;
+}
+.-ml-3 {
+  margin-left: -$margin-3;
+}
+.-ml-4 {
+  margin-left: -$margin-4;
+}
+.-ml-5 {
+  margin-left: -$margin-5;
+}
+.-ml-6 {
+  margin-left: -$margin-6;
+}
+.-ml-8 {
+  margin-left: -$margin-8;
+}
+.-ml-10 {
+  margin-left: -$margin-10;
+}
+.-ml-12 {
+  margin-left: -$margin-12;
+}
+.-ml-16 {
+  margin-left: -$margin-16;
+}
+.-ml-20 {
+  margin-left: -$margin-20;
+}
+.-ml-24 {
+  margin-left: -$margin-24;
+}
+.-ml-32 {
+  margin-left: -$margin-32;
+}
+.-ml-40 {
+  margin-left: -$margin-40;
+}
+.-ml-48 {
+  margin-left: -$margin-48;
+}
+.-ml-56 {
+  margin-left: -$margin-56;
+}
+.-ml-64 {
+  margin-left: -$margin-64;
+}
+.-ml-px {
+  margin-left: -1px;
 }
 
 /* Space Between */
