--- a/src/styles/5-components/_components-header.scss
+++ b/src/styles/5-components/_components-header.scss
@@ -1,34 +1,65 @@
 .header {
   @extend .h-16, .bg-white, .border-b, .border-gray-400;
 
-  &__nav {
-    @extend .h-full,
-      .flex,
-      .justify-between,
+  &__logo {
+    @extend .text-black,
+      .inline-flex,
       .items-center,
-      .container,
-      .mx-auto,
-      .text-accents-4,
-      .max-w-screen-xl,
-      .mx-auto,
-      .px-8;
+      .text-2xl,
+      .font-black,
+      .tracking-tight;
+  }
 
-    &__logo {
-      @extend .text-black,
-        .inline-flex,
-        .items-center,
-        .text-2xl,
-        .font-black,
-        .tracking-tight;
+  @mixin header_menu_md($output: false) {
+    @if $output {
+      @extend .hidden;
+    } @else {
+      @extend %header_menu_md;
     }
+  }
 
-    &__menu {
-      @extend .grid, .justify-between, .items-center, .gap-8, .text-sm;
-      grid-template-columns: repeat(4, auto);
+  %header_menu_md {
+    @include header_menu_md(true);
+  }
+
+  &__menu {
+    @extend .-mr-2, .-my-2;
+
+    @include md {
+      // @extend %header_menu_md;
+      // display: none;
+      @include header_menu_md();
     }
+  }
 
-    &__account {
-      @extend .grid, .justify-between, .items-center, .gap-8, .text-sm;
+  @mixin header_nav_md {
+    @extend .flex, .space-x-6;
+  }
+
+  %header_nav_md {
+    @include header_nav_md;
+  }
+
+  &__nav {
+    @extend .hidden;
+
+    @include md {
+      @extend %header_nav_md;
+    }
+  }
+
+  @mixin header_account_md {
+    @extend .grid, .justify-between, .items-center, .gap-8, .text-sm;
+  }
+
+  %header_account_md {
+    @include header_account_md;
+  }
+
+  &__account {
+    @extend .hidden;
+    @include md {
+      @extend %header_account_md;
       grid-template-columns: repeat(2, auto);
     }
   }
