--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,11 +2,11 @@
 
 @tailwind components;
 
-.footer__item::after {
+.footer__item:after {
   color: #b7b5bd;
   content: "•";
   padding: 0.75rem;
-  font-size: 8px;
+  font-size: 0.85rem;
   vertical-align: middle;
 }
 
